syntax = "proto3";

package order;

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "com.kangfru.mocktradingsystem.grpc";

enum OrderType {
  ORDER_TYPE_UNSPECIFIED = 0;
  ORDER_TYPE_BUY = 1;
  ORDER_TYPE_SELL = 2;
}

enum OrderStatus {
  ORDER_STATUS_UNSPECIFIED = 0;
  ORDER_STATUS_PENDING = 1;
  ORDER_STATUS_FILLED = 2;
  ORDER_STATUS_CANCELLED = 3;
  ORDER_STATUS_MODIFIED = 4;
}

enum OrderAction {
  ORDER_ACTION_UNSPECIFIED = 0;
  ORDER_ACTION_NEW = 1;
  ORDER_ACTION_CANCEL = 2;
  ORDER_ACTION_MODIFY = 3;
}

enum PriceType {
  PRICE_TYPE_UNSPECIFIED = 0;
  PRICE_TYPE_LIMIT = 1;
  PRICE_TYPE_MARKET = 2;
}

message Order {

  string order_id = 1;
  int64 order_number = 2;
  string stock_code = 3;
  OrderType order_type = 4;
  int32 quantity = 5;
  string price = 6;
  PriceType price_type = 7;
  google.protobuf.Timestamp order_time = 8;
  OrderStatus status = 9;
  OrderAction action = 10;
  optional int64 original_order_number = 11;

}

message GetOrderRequest {
  int64 order_number = 1;
}

message GetOrderResponse {
  Order order = 1;
}

message WatchOrderStatusRequest {
  int64 order_number = 1;
}

message OrderStatusUpdate {
  OrderStatus order_status = 1;
}

message OrderRequest {
  string stock_code = 1;
  OrderType order_type = 2;
  int32 quantity = 3;
  string price = 4;
  PriceType price_type = 5;
}

message OrderResponse {
  int32 success_count = 1;
  int32 fail_count = 2;
}

service OrderService {
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
  rpc WatchOrderStatus(WatchOrderStatusRequest) returns (stream OrderStatusUpdate);
  rpc CreateBulkOrder(stream OrderRequest) returns (OrderResponse);
}
